[package]
name = "ltpp-output"
version = "1.0.6"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = "An atomic output library based on Rust that supports output functionalities through functions, builders, and other methods. It allows customization of text and background colors."
keywords = ["output", "console", "log", "colour", "color"]
repository = "https://github.com/ltpp-universe/ltpp-rust-output"
